force-app/main/default/objects/Contract_Subscriber__c/Contract_Subscriber__c.object-meta.xml
<CustomObject>
    <label>Contract Subscriber</label>
    <nameField>
        <displayFormat>CS-{0}</displayFormat>
        <label>Contract Subscriber Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Subscribers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>