force-app/main/default/objects/Contract_Subscriber__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <label>Contract Status</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>