force-app/main/default/objects/Contract_Subscriber__c/fields/Contract_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status_Date__c</fullName>
    <label>Contract Status Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>