force-app/main/default/objects/Contract_Subscriber__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>