force-app/main/default/objects/Contract_Subscriber__c/fields/Has_Matching_Email__c.field-meta.xml
<CustomField>
    <fullName>Has_Matching_Email__c</fullName>
    <formula>LOWER(Email_Address__c) = LOWER(Contact__r.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Matching Email</label>
    <type>Checkbox</type>
</CustomField>