force-app/main/default/objects/Contract_Subscriber__c/fields/Opt_In_Status__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Status__c</fullName>
    <label>Opt-In Status</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>