force-app/main/default/objects/Contract_Subscriber__c/fields/Subscriber_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Status_Code__c</fullName>
    <label>Subscriber Status Code</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>