force-app/main/default/objects/Contract_Subscriber__c/fields/Subscriber_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Status_Date__c</fullName>
    <label>Subscriber Status Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>